--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="fas fa-leaf"></i>
-                <span>CleanGrass</span>
+                <span>CleanGrss</span>
             </div>
             <ul class="nav-links">
                 <li><a href="#inicio">Inicio</a></li>
