se actualizaron los archivos index. css y script

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section class="carousel-container" id="inicio">
         <div class="carousel">
             <div class="carousel-slide">
-                <img src="/api/placeholder/1920/500" alt="Pasto sintético para canchas de pádel">
+                <img src="img/carousel/carousel-padel.jpg" alt="Pasto sintético para canchas de pádel">
                 <div class="carousel-content">
                     <h1>Transforma tu espacio con el mejor pasto sintético</h1>
                     <p>Soluciones de césped artificial de alta calidad para jardines, terrazas y áreas deportivas</p>
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="carousel-slide">
-                <img src="/api/placeholder/1920/500" alt="Pasto sintético para áreas infantiles">
+                <img src="img/carousel/carousel-infantil.jpg" alt="Pasto sintético para áreas infantiles">
                 <div class="carousel-content">
                     <h1>Ahorra agua y tiempo de mantenimiento</h1>
                     <p>Una solución ecológica y práctica que mantiene su belleza durante años</p>
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="carousel-slide">
-                <img src="/api/placeholder/1920/500" alt="Pasto sintético para campos de golf">
+                <img src="img/carousel/carousel-golf.jpg" alt="Pasto sintético para campos de golf">
                 <div class="carousel-content">
                     <h1>Instalación profesional garantizada</h1>
                     <p>Contamos con técnicos especializados y los mejores materiales del mercado</p>
@@ -74,7 +74,7 @@
         <div class="products-grid">
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/api/placeholder/400/250" alt="Garden Classic - Pasto sintético para jardines">
+                    <img src="img/productos/garden-classic.jpg" alt="Garden Classic - Pasto sintético para jardines">
                 </div>
                 <div class="product-info">
                     <h3>Garden Classic</h3>
@@ -85,7 +85,7 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/api/placeholder/400/250" alt="Sport Pro - Pasto sintético deportivo">
+                    <img src="img/productos/sport-pro.jpg" alt="Sport Pro - Pasto sintético deportivo">
                 </div>
                 <div class="product-info">
                     <h3>Sport Pro</h3>
@@ -96,7 +96,7 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/api/placeholder/400/250" alt="Premium Royal - Pasto sintético premium">
+                    <img src="img/productos/premium-royal.jpg" alt="Premium Royal - Pasto sintético premium">
                 </div>
                 <div class="product-info">
                     <h3>Premium Royal</h3>
@@ -107,7 +107,7 @@
             </div>
             <div class="product-card">
                 <div class="product-image">
-                    <img src="/api/placeholder/400/250" alt="Pet Friendly - Pasto sintético para mascotas">
+                    <img src="img/productos/pet-friendly.jpg" alt="Pet Friendly - Pasto sintético para mascotas">
                 </div>
                 <div class="product-info">
                     <h3>Pet Friendly</h3>
@@ -126,7 +126,7 @@
         <div class="projects-grid">
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/api/placeholder/400/300" alt="Proyecto jardín residencial">
+                    <img src="img/proyectos/jardin-residencial.jpg" alt="Proyecto jardín residencial">
                 </div>
                 <div class="project-overlay">
                     <h3>Jardín Residencial</h3>
@@ -135,7 +135,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/api/placeholder/400/300" alt="Proyecto cancha multideporte">
+                    <img src="img/proyectos/cancha-multideporte.jpg" alt="Proyecto cancha multideporte">
                 </div>
                 <div class="project-overlay">
                     <h3>Cancha Multideporte</h3>
@@ -144,7 +144,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/api/placeholder/400/300" alt="Proyecto terraza corporativa">
+                    <img src="img/proyectos/terraza-corporativa.jpg" alt="Proyecto terraza corporativa">
                 </div>
                 <div class="project-overlay">
                     <h3>Terraza Corporativa</h3>
@@ -153,7 +153,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/api/placeholder/400/300" alt="Proyecto parque infantil">
+                    <img src="img/proyectos/parque-infantil.jpg" alt="Proyecto parque infantil">
                 </div>
                 <div class="project-overlay">
                     <h3>Parque Infantil</h3>
@@ -162,7 +162,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/api/placeholder/400/300" alt="Proyecto área recreativa">
+                    <img src="img/proyectos/area-recreativa.jpg" alt="Proyecto área recreativa">
                 </div>
                 <div class="project-overlay">
                     <h3>Área Recreativa</h3>
@@ -171,7 +171,7 @@
             </div>
             <div class="project-card">
                 <div class="project-image">
-                    <img src="/api/placeholder/400/300" alt="Proyecto jardín vertical">
+                    <img src="img/proyectos/jardin-vertical.jpg" alt="Proyecto jardín vertical">
                 </div>
                 <div class="project-overlay">
                     <h3>Jardín Vertical</h3>
@@ -187,7 +187,7 @@
         </div>
         <div class="about-container">
             <div class="about-image">
-                <img src="/api/placeholder/600/400" alt="Nuestro equipo de instalación profesional">
+                <img src="img/about/equipo-instalacion.jpg" alt="Nuestro equipo de instalación profesional">
             </div>
             <div class="about-content">
                 <h3>Tu mejor opción en pasto sintético</h3>
